[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "0ed08d6a15f48e5030fcfdcb5d417a84d315e69b", features = ["dynamic"] }


